# Star-Magic-F_U

./: .gitignore  AUDIT_COMPLETE_EXECUTIVE_SUMMARY.md  AUDIT_SUMMARY_FINAL.md  CMakeCache.txt  CMakeLists.txt  ENHANCEMENT_GUIDE.md  ENHANCEMENT_SUMMARY.md  FOLLOW_UP.md  INTEGRATION_SUMMARY.md  INTEGRATION_SUMMARY_SESSION6.md  ITERATION_CAPABILITIES_REPORT.md  ITERATION_SUMMARY.md  LICENSE  MAIN_1.cpp  MAIN_1_functionality_report.txt  MASTER_AUDIT_INDEX.md  NGC346_ADAPTIVE_INTEGRATION_REPORT.md  NGC346_COMPLETION_REPORT.md  NGC346_DEPLOYMENT_VERIFICATION.js  PORTING_AUDIT_REPORT_S13_S74.md  QUICK_REFERENCE.txt  QUICK_REFERENCE_S13_S74.md  README.md  S80_PORT_SESSION_SUMMARY.txt  S82_ADAPTIVE_INTEGRATION_REPORT.md  S82_DEPLOYMENT_VERIFICATION.js  S82_FINAL_COMPLETION_REPORT.md  SESSION_COMPLETION_REPORT.md  SETUP.md  SOURCE60_PORT_VERIFICATION.md  SOURCE74_INTEGRATION_SUMMARY.md  SOURCE77_ANALYSIS.md  SOURCE77_PORT_COMPLETION.md  SOURCE77_PORT_INDEX.md  SOURCE78_ANALYSIS.md  SOURCE78_PORT_COMPLETION.md  SOURCE79_ANALYSIS.md  SOURCE79_PORT_COMPLETION.md  SOURCE80_ANALYSIS.md  SOURCE80_DYNAMICS_QUICK_REFERENCE.md  (+376 more)
.github/: copilot-instructions.md
module_backups_20251104_105304/: Source103.cpp  Source104.cpp  Source110.cpp  Source115.cpp  Source117.cpp  Source125.cpp  Source126.cpp  Source128.cpp  Source129.cpp  Source133.cpp  Source138.cpp  Source139.cpp  Source140.cpp  Source141.cpp  Source146.cpp  Source151.cpp  Source154.cpp  Source158.cpp  Source17.cpp  Source19.cpp  Source20.cpp  Source25.cpp  Source26.cpp  Source30.cpp  Source32.cpp  Source37.cpp  Source42.cpp  (+21 more)
(+1 files in other folders)
